# hybridts

./: CONTRIBUTING.md  LICENSE  MANIFEST.in  NEXT_STEPS.md  README.md  manifest.mf  pyproject.toml  requirements.txt  setup.py
.github/workflows/: tests.yml
examples/: README.md  quickstart.py
examples/research/: Hybrid TS - Prophet + XGBoost + LightGBM (variant).py  Hybrid TS - Prophet + XGBoost + LightGBM.py  Prophet + LightGBM.py  prophet_baseline.py  prophet_xgboost.py  prophet_xgboost_static.py  sarimax_xgboost.py
hybridts/: README.md  __init__.py  defaults.py  pipeline.py  plotting.py
hybridts/config/: loader.py  settings.yaml
hybridts/features/: __init__.py  engineering.py  holidays.py
hybridts/metrics/: __init__.py  forecast.py
hybridts/models/: __init__.py  base.py
hybridts/models/primary/: prophet.py
hybridts/models/secondary/: __init__.py  lightgbm_model.py  xgboost_model.py
hybridts/preprocessing/: __init__.py  processor.py
hybridts/src/: __init__.py
hybridts/src/exception/: __init__.py  dataframe_exception.py  model_exception.py
hybridts/src/features/: __init__.py  data_processor.py  engineering.py  holidays.py
hybridts/src/metrics/: forecast.py
hybridts/src/models/: __init__.py
hybridts/src/models/primary/: __init__.py  prophet.py
hybridts/src/models/secondary/: __init__.py  lightgbm.py  xgboost.py
hybridts/src/pipeline/: __init__.py  pipeline.py  pipeline_config.py
hybridts/src/training/: __init__.py  lightgbm.py  prophet.py  xgboost.py
tests/: README.md  conftest.py  test_data_processor.py  test_engineering.py  test_exceptions.py  test_holidays.py  test_metrics.py  test_pipeline.py
